--- a/split-by-gene.cabal
+++ b/split-by-gene.cabal
@@ -3,7 +3,7 @@ version:             0.1.0.0
 synopsis:            Initial project template from stack
 description:         Please see README.md
 homepage:            http://github.com/GregorySchwartz/split-by-gene#readme
-license:             BSD3
+license:             GPLv2
 license-file:        LICENSE
 author:              Gregory W. Schwartz
 maintainer:          gregory.schwartz@drexel.edu
